ip2location.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "informationtech",
  "char_count": 2375,
  "classifier_probability": 0.85,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.38,
  "homepage_snapshot_redirected_domain": "ip2location.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001095600id_/http://www.ip2location.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001095600id_/http%3A//ip2location.com",
  "interval": "2007_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ip2location.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229013522id_/http%3A//www.ip2location.com/privacystatement.aspx",
  "policy_title": "Privacy Statement | IP2Location\u2122",
  "policy_url": "ip2location.com/privacystatement.aspx",
  "sha1": "8b4622a42454b6192f61fd8508c85c0c21c4a20b",
  "simhash": 4721757236310345324,
  "simhash_updated": true,
  "site_hostname": "ip2location.com",
  "site_url": "http://ip2location.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20071229013522",
  "word_count": 373,
  "year": 2007
}

--- a/i/ip/ip2/ip2location.com.html
+++ b/i/ip/ip2/ip2location.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ip2location.com privacy policy that was archived on 2007-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070626104522id_/http%3A//www.ip2location.com/privacystatement.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ip2location.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229013522id_/http%3A//www.ip2location.com/privacystatement.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>Privacy Statement | IP2Location™</title>
@@ -315,21 +315,6 @@
 								<td valign="middle">
 									<table cellspacing="0" cellpadding="0" width="100%" border="0">
 										<tbody><tr>
-											<td align="center" width="25" bgcolor="#b9deff"><a class="border16" href="/ip2location-application.aspx">APx</a></td>
-											<td valign="middle"><a class="fontbluesmaller" href="/ip2location-application.aspx">IP2Location™ 
-													Application (Free)</a>
-											</td>
-										</tr>
-									</tbody></table>
-								</td>
-							</tr>
-							<tr>
-								<td bgcolor="#73b5ed" height="1"></td>
-							</tr>
-							<tr>
-								<td valign="middle">
-									<table cellspacing="0" cellpadding="0" width="100%" border="0">
-										<tbody><tr>
 											<td align="center" width="25" bgcolor="#b9deff"><a class="border16" href="/ip2location-dotnet-component.aspx">DNx</a></td>
 											<td valign="middle"><a class="fontbluesmaller" href="/ip2location-dotnet-component.aspx">IP2Location™ 
 													.NET Component </a>
@@ -360,9 +345,24 @@
 								<td valign="middle">
 									<table cellspacing="0" cellpadding="0" width="100%" border="0">
 										<tbody><tr>
-											<td align="center" width="25" bgcolor="#b9deff"><a class="border16" href="/ip-country-activex.aspx">AX1</a></td>
-											<td valign="middle"><a class="fontbluesmaller" href="/ip-country-activex.aspx">IP2Location™ 
-													(Country Edition) ActiveX/COM DLL </a>
+											<td align="center" width="25" bgcolor="#b9deff"><a class="border16" href="/ip2location-activex.aspx">AXx</a></td>
+											<td valign="middle"><a class="fontbluesmaller" href="/ip2location-activex.aspx"> IP2Location™ 
+													ActiveX/COM DLL </a>
+											</td>
+										</tr>
+									</tbody></table>
+								</td>
+							</tr>
+							<tr>
+								<td bgcolor="#73b5ed" height="1"></td>
+							</tr>
+							<tr>
+								<td valign="middle">
+									<table cellspacing="0" cellpadding="0" width="100%" border="0">
+										<tbody><tr>
+											<td align="center" width="25" bgcolor="#b9deff"><a class="border16" href="/ip2location-application.aspx">ISx</a></td>
+											<td valign="middle"><a class="fontbluesmaller" href="/ip2location-isapi-filter.aspx">IP2Location™ 
+													ISAPI Filter</a>
 											</td>
 										</tr>
 									</tbody></table>
@@ -390,9 +390,8 @@
 								<td valign="middle">
 									<table cellspacing="0" cellpadding="0" width="100%" border="0">
 										<tbody><tr>
-											<td align="center" width="25" bgcolor="#b9deff"><a class="border16" href="/customprogramming.aspx">CPS</a></td>
-											<td valign="middle"><a class="fontbluesmaller" href="/customprogramming.aspx">Custom 
-													Programming Services</a>
+											<td align="center" width="25" bgcolor="#b9deff"><a class="border16" href="/browserobject.aspx">BOx</a></td>
+											<td style="MARGIN-TOP: 5px" valign="middle"><a class="fontbluesmaller" href="/browserobject.aspx">BrowserObject™ Browser Detection</a>
 											</td>
 										</tr>
 									</tbody></table>
@@ -413,6 +412,21 @@
 									</tbody></table>
 								</td>
 							</tr>
+							<tr>
+								<td bgcolor="#73b5ed" height="1"></td>
+							</tr>
+							<tr>
+								<td valign="middle">
+									<table cellspacing="0" cellpadding="0" width="100%" border="0">
+										<tbody><tr>
+											<td align="center" width="25" bgcolor="#b9deff"><a class="border16" href="/customprogramming.aspx">CPS</a></td>
+											<td valign="middle"><a class="fontbluesmaller" href="/customprogramming.aspx">Custom 
+													Programming Services</a>
+											</td>
+										</tr>
+									</tbody></table>
+								</td>
+							</tr>
 						</tbody></table>
 					</td>
 				</tr>
@@ -422,7 +436,21 @@
 				<tr>
 					<td>
 						<table class="leftbarborder" cellspacing="0" cellpadding="0" width="100%" border="0">
-							<tbody><tr>
+						<tbody><tr>
+								<td><a class="fontbluesmaller" href="/ip2location-application.aspx">IP2Location™ Application (Free)</a>
+								</td>
+							</tr>
+							<tr>
+								<td bgcolor="#73b5ed" height="1"></td>
+							</tr>
+							<tr>
+								<td><a class="fontbluesmaller" href="/demo.aspx">IP2Location™ Online Demo (Free)</a>
+								</td>
+							</tr>
+							<tr>
+								<td bgcolor="#73b5ed" height="1"></td>
+							</tr>
+							<tr>
 								<td><a class="fontbluesmaller" href="/emailtracer.aspx">IP2Location™ Email Header 
 										Tracer (Free)</a>
 								</td>
@@ -440,6 +468,13 @@
 							</tr>
 							<tr>
 								<td><a class="fontbluesmaller" href="/developers.aspx">IP2Location™ API (Free)</a></td>
+							</tr>
+							<tr>
+								<td bgcolor="#73b5ed" height="1"></td>
+							</tr>
+							<tr>
+								<td valign="middle"><a class="border17" href="/articles.aspx">IP2Location™ Articles 
+										&amp; Tutorial (Free)</a></td>
 							</tr>
 							<tr>
 								<td bgcolor="#73b5ed" height="1"></td>
@@ -466,13 +501,6 @@
 								<td bgcolor="#73b5ed" height="1"></td>
 							</tr>
 							<tr>
-								<td valign="middle"><a class="border17" href="/flagsoftheworld.aspx">Flags of the World 
-										(Free)</a></td>
-							</tr>
-							<tr>
-								<td bgcolor="#73b5ed" height="1"></td>
-							</tr>
-							<tr>
 								<td valign="middle"><a class="border17" href="/countryinformation.aspx">World Country 
 										Information (Free)</a></td>
 							</tr>
@@ -487,8 +515,8 @@
 								<td bgcolor="#73b5ed" height="1"></td>
 							</tr>
 							<tr>
-								<td valign="middle"><a class="border17" href="/articles.aspx">IP2Location™ Articles 
-										&amp; Tutorial (Free)</a></td>
+								<td valign="middle"><a class="border17" href="/flagsoftheworld.aspx">Flags of the World 
+										(Free)</a></td>
 							</tr>
 						</tbody></table>
 					</td>
@@ -684,19 +712,21 @@
 				</tr>
 				<tr>
 					<td class="fontwhiteregular" align="center" colspan="13" height="14">Copyright © 
-						2001-2007<a class="fontwhiteregular" href="http://www.ip2location.com"> IP2Location.com</a>. 
+						2001-2008<a class="fontwhiteregular" href="http://www.ip2location.com"> IP2Location.com</a>. 
 						All Rights Reserved.</td>
 				</tr>
 			</tbody></table>
 		</td>
 	</tr>
 	<tr>
-		<td align="center"><table width="75%" border="0" cellspacing="0" cellpadding="5">
+		<td align="center">
+			<table width="75%" border="0" cellspacing="0" cellpadding="0">
 				<tbody><tr>
 					<td><a href="http://www.ip2location.com/" target="_blank"><img src="images/ipglogo.GIF" alt="Geolocation IP Address by IP2Location" width="155" height="50" border="0"></a></td>
 					<td><a href="http://www.fraudlabs.com/" target="_blank"><img src="images/xmlglogo.gif" alt="Prevent Credit Card Fraud by Fraudlabs" width="155" height="50" border="0"></a></td>
 					<td><a href="http://www.zipcodeworld.com/" target="_blank"><img src="images/zipglogo.GIF" alt="Zip Code Database Solution by ZIPCodeWorld.com" width="155" height="50" border="0"></a></td>
 					<td><a href="http://www.geodatasource.com/" target="_blank"><img src="images/geodatasource.gif" alt="Geographic City Database by GeoDataSource" width="155" height="50" border="0"></a></td>
+					<td><a href="http://www.browserobject.com/" target="_blank"><img src="images/bologo.gif" alt="Browser Detection by BrowserObject" width="155" height="50" border="0"></a></td>
 				</tr>
 			</tbody></table>
 		</td>
