reservations.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;travel",
  "char_count": 21185,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.15,
  "homepage_snapshot_redirected_domain": "reservations.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071011092301id_/http://reservations.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071011092301id_/http%3A//reservations.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "travelocity.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229014355id_/http%3A//svc.travelocity.com/info/info_window/0%2C2766%2CTRAVELOCITY%257CPRIVACY_WINDOW%2C00.html",
  "policy_title": "Privacy Policy",
  "policy_url": "svc.travelocity.com/info/info_window/0,2766,TRAVELOCITY%7CPRIVACY_WINDOW,00.html",
  "sha1": "95524d938ad84c3afbdd1165d62b44305989ff0e",
  "simhash": 9186151027669762743,
  "simhash_updated": false,
  "site_hostname": "reservations.com",
  "site_url": "http://reservations.com",
  "smog": 15.6,
  "strict_updated": true,
  "timestamp": "20071229014355",
  "word_count": 3433,
  "year": 2007
}

--- a/r/re/res/reservations.com.html
+++ b/r/re/res/reservations.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the reservations.com privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630070731id_/http%3A//svc.travelocity.com/info/info_window/0%2C2766%2CTRAVELOCITY%257CPRIVACY_WINDOW%2C00.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the reservations.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229014355id_/http%3A//svc.travelocity.com/info/info_window/0%2C2766%2CTRAVELOCITY%257CPRIVACY_WINDOW%2C00.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
 @import url("http://i.travelpn.com/css/popups.css");
-@import url('http://i.travelpn.com/css/aolsvc.css');</style>
+</style>
 
 <script type="text/javascript">
  <!--
@@ -18,13 +18,13 @@
 </script>
 <script language="javascript" type="text/javascript" src="http://travel.travelocity.com/jsp/travelocity/flights/common/scripts/Util.js"></script>
 </head>
-<body id="popup" style="background-image:url('http://hg.travelocity.com.edgesuite.net/graphics/pop_p_footerbg.gif'); background-repeat:repeat-x; background-position:bottom;"> 
-<!-- Box: tcysnp04 -->
-<!-- Service : travelocity LANG : EN-->
+<body id="popup" style="background-image:url('http://hg.travelocity.com.edgesuite.net/graphics/popupBG.gif'); background-repeat:repeat-x; background-position:bottom;"> 
+<!-- Box: tcysnp03 -->
+<!-- Service : TRAVELOCITY LANG : EN-->
 
 <div id="content"> 
-  <div id="popupHeader_gen"> 
-     <div id="links"><span class="hPad3"><a href="javascript:window.print()">Print</a></span><span class="hPad3">|</span><a href="javascript:window.close()">Close</a></div> 
+  <div id="popupHeader"> 
+    <div id="logo"><img src="http://hg.travelocity.com.edgesuite.net/graphics/logo_popup_tvly.gif" alt="Travelocity" border="0"></div> <div id="links"><span class="hPad3"><a href="javascript:window.print()">Print</a></span><span class="hPad3">|</span><a href="javascript:window.close()">Close</a></div> 
   </div> 
   <div class="clear"></div>
   <h1>Privacy Policy </h1> 
@@ -102,8 +102,8 @@ If you choose to become a registered member of Travelocity, you must provide you
 As a Travelocity member, you can choose to complete your online profile by providing us with travel preferences, frequent-traveler or affinity numbers, credit-card billing information, paper ticket delivery address, and other personal information. This information is primarily used to assist you in making reservations quickly without having to type in the same information repeatedly. For example, you can store your airline frequent-flyer numbers so that when your make a reservation on that airline, we can automatically pre-fill the frequent-flyer number input box for you.
 </p>
 
-<p><i>Newsletters and FareWatcher</i><br>
-Travelocity's Real Deals and other newsletters and our FareWatcher service are optional benefits you may choose to subscribe to that keep you up to date with the latest special travel deals and low airfares. FareWatcher tracks the prices of airline tickets to your favorite places. When the price for one of your favorite trips changes based on your preferences, Travelocity will notify you of the change via e-mail. Your e-mail address and preferred round trip city pairs are necessary to receive FareWatcher e-mails. 
+<p><i>Newsletters and FareWatcher Plus<span class="smark">SM</span></i><br>
+Travelocity's Real Deals and other newsletters and our FareWatcher Plus<span class="smark">SM</span> service are optional benefits you may choose to subscribe to that keep you up to date with the latest special travel deals and low airfares. FareWatcher Plus<span class="smark">SM</span> tracks the prices of airline tickets to your favorite places. When the price for one of your favorite trips changes based on your preferences, Travelocity will notify you of the change via e-mail. Your e-mail address and preferred round trip city pairs are necessary to receive FareWatcher Plus<span class="smark">SM</span> e-mails. 
 </p>  
 
 <p><i>Online Surveys</i><br>
@@ -127,7 +127,7 @@ We automatically log generic information about your computer's connection to the
 
 First and foremost, you can rest assured that <strong>no</strong> personal information about you is gathered or stored in the cookies placed by the Travelocity.com web site and, as a result, none can be passed on to any third parties.<br><br> 
 
-Cookies allow us to serve you better and more efficiently, and to personalize your experience at our site. Travelocity uses cookies to personalize your experience on our site and with respect to advertisements. As to the former, these types of cookies allow you to log in without having to type your log-in name each time (only your password is needed), let us know if you are a FareWatcher participant or a Travelocity VIP, your preferred language and departure city, and so forth. We may also use such cookies to display an advertisement to you while you are on our website or to send you a "Good Day to Buy" email (or similar emails -- assuming you have not opted out of receiving such emails) focusing on destinations in which we think you might be interested. None of this information is passed to any third party and is used solely by us to provide you with a better user experience on our web site. <strong>No</strong> personal information about you is gathered through the use of these types of cookies.<br><br>
+Cookies allow us to serve you better and more efficiently, and to personalize your experience at our site. Travelocity uses cookies to personalize your experience on our site and with respect to advertisements. As to the former, these types of cookies allow you to log in without having to type your log-in name each time (only your password is needed), let us know if you are a FareWatcher Plus<span class="smark">SM</span> participant or a Travelocity VIP, your preferred language and departure city, and so forth. We may also use such cookies to display an advertisement to you while you are on our website or to send you a "Good Day to Buy" email (or similar emails -- assuming you have not opted out of receiving such emails) focusing on destinations in which we think you might be interested. None of this information is passed to any third party and is used solely by us to provide you with a better user experience on our web site. <strong>No</strong> personal information about you is gathered through the use of these types of cookies.<br><br>
   
 A cookie may also be placed by our advertising server. Such cookies are used only for purposes of tracking the effectiveness of advertising served by us on our site and no personal information about you is gathered from you by the use of these cookies, nor is this information shared with any third parties. Similarly, a cookie may be placed by our third-party advertising companies. These companies may use aggregated statistics about your visits to this and other web sites in order to provide advertisements about travel-related goods and services that you may be interested in. The information they collect does <strong>not</strong> include your personal information.<br><br>
  
@@ -153,18 +153,18 @@ When you reserve or purchase travel services through Travelocity, we provide to 
 <a name="optout"><span style="font-weight:bold">How can I opt-out of receiving your promotional emails?<br>
 Our Opt-out Policy</span></a><br>
 </p><p>
-At any time, you can unsubscribe from our Real Deals, Good Day to Buy, or other newsletter or similar services through the "My Account" tab, accessible through the "My Stuff" link on the <a href="http://www.travelocity.com" target="_blank">Travelocity home page</a>. You can unsubscribe from our FareWatcher service by editing your preferences in the FareWatcher box of the Travelocity homepage. As a member or promotion/sweepstakes entrant, you will occasionally receive e-mail updates from us about fare sales in your area, special offers, new Travelocity services, and other noteworthy items. We hope you will find these updates interesting and informative. Of course, if you would rather not receive them, please click on the "unsubscribe" link in our e-mail, or follow the instructions in each e-mail message or send us an email by clicking <a href="mailto:travelocity@Travelocity.com">here</a>. Travelocity reserves the right to limit membership to those who will accept e-mails. Members will be notified via e-mail prior to any actions taken.
+At any time, you can unsubscribe from our Real Deals, Good Day to Buy, or other newsletter or similar services through the "My Account" tab, accessible through the "My Stuff" link on the <a href="http://www.travelocity.com" target="_blank">Travelocity home page</a>. You can unsubscribe from our FareWatcher Plus<span class="smark">SM</span> service by editing your preferences in the FareWatcher Plus<span class="smark">SM</span> box of the Travelocity homepage. As a member or promotion/sweepstakes entrant, you will occasionally receive e-mail updates from us about fare sales in your area, special offers, new Travelocity services, and other noteworthy items. We hope you will find these updates interesting and informative. Of course, if you would rather not receive them, please click on the "unsubscribe" link in our e-mail, or follow the instructions in each e-mail message or send us an email by clicking <a href="mailto:travelocity@Travelocity.com">here</a>. Travelocity reserves the right to limit membership to those who will accept e-mails. Members will be notified via e-mail prior to any actions taken.
 </p>
 <p>
 <a name="access"><span style="font-weight:bold">How can I update or correct my personal information?</span></a><br>
 </p><p>
-At any time, you can view and/or update your Real Deals or other newsletter or our FareWatcher service preferences. You can also update your personal profile, which includes member registration and travel preferences information, through the "My Account" tab, accessible through the "My Stuff" link on the <a href="http://www.travelocity.com" target="_blank">Travelocity home page</a>.
+At any time, you can view and/or update your Real Deals or other newsletter or our FareWatcher Plus<span class="smark">SM</span> service preferences. You can also update your personal profile, which includes member registration and travel preferences information, through the "My Account" tab, accessible through the "My Stuff" link on the <a href="http://www.travelocity.com" target="_blank">Travelocity home page</a>.
 </p>
 <p>
 <a name="safeguards"><span style="font-weight:bold">What safeguards are in place to protect the loss, misuse or alteration of your information?</span></a><br>
 </p><p>
 <img src="http://hg.travelocity.com.edgesuite.net/images/icons/shopsafe_116x31.gif" alt="Shop Safe" align="left" border="0" height="31" hspace="8" width="96"> 
-All personal information you provide to Travelocity is transmitted using SSL (Secure Socket Layer) encryption. SSL is a proven coding system that lets your browser automatically encrypt, or scramble, data before you send it to us. In addition, when you make travel purchases on Travelocity, you are protected by <a href="http://www.travelocity.com/info/info_popup/0,,travelocity|GUARANTEE_WINDOW,00.html" onclick="launchWindow('http://www.travelocity.com/info/info_popup/0,,travelocity|GUARANTEE_WINDOW,00.html',600,400); return false;">Travelocity's Shop Safe Guarantee</a>. 
+All personal information you provide to Travelocity is transmitted using SSL (Secure Socket Layer) encryption. SSL is a proven coding system that lets your browser automatically encrypt, or scramble, data before you send it to us. In addition, when you make travel purchases on Travelocity, you are protected by <a href="http://www.travelocity.com/info/info_popup/0,,TRAVELOCITY|GUARANTEE_WINDOW,00.html" onclick="launchWindow('http://www.travelocity.com/info/info_popup/0,,TRAVELOCITY|GUARANTEE_WINDOW,00.html',600,400); return false;">Travelocity's Shop Safe Guarantee</a>. 
 </p>
 <p>
 <a name="moreinfo"><span style="font-weight:bold">What other information should I know about my privacy?</span></a><br>
