--- a/m/mb/mbs/mbs.ac.uk.html
+++ b/m/mb/mbs/mbs.ac.uk.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the mbs.ac.uk privacy policy that was archived on 2007-04-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070419221045id_/http%3A//www.manchester.ac.uk/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mbs.ac.uk privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229020654id_/http%3A//www.manchester.ac.uk/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1">
 <link rel="SHORTCUT ICON" href="http://www.manchester.ac.uk/medialibrary/images/corporate/favicon.ico">
 <link href="http://www.manchester.ac.uk/medialibrary/css/corporate/_base.css" type="text/css" rel="stylesheet" media="screen">
 <link href="http://www.manchester.ac.uk/medialibrary/css/corporate/_print.css" type="text/css" rel="stylesheet" media="print">
@@ -33,7 +33,7 @@
 <tbody><tr valign="bottom">
 <td style="border-right: 1px solid #cccccc;"><a href="http://www.manchester.ac.uk/" title="The University of Manchester's home page">Home</a>&nbsp;|&nbsp;<a href="http://www.manchester.ac.uk/aboutus/search/a-z/">A to Z</a></td>
 <td rowspan="2">
-<form id="search" action="http://www.manchester.ac.uk/cgi-bin/searchRoute.pl" method="get">
+<form id="search" action="http://www.manchester.ac.uk/cgi-bin/searchRoute.pl" method="get" accept-charset="utf-8">
 <div>
 <input class="radio" id="radiowebsite" name="searchtype" value="website" checked="checked" type="radio"><label for="radiowebsite">Website</label>
 <input class="radio" id="radiostaff" name="searchtype" value="directory" type="radio"><label for="radiostaff">Staff</label>
@@ -127,7 +127,7 @@
 
 <div id="footer">
 <div class="navigation">
-<p>| <a href="/disclaimer/" title="Disclaimer">Disclaimer</a> | <a href="/privacy/" title="Privacy">Privacy</a> | <a href="/copyright/" title="Copyright Notice">Copyright notice</a> | <a href="/accessibility/" title="Accessibility">Accessibility</a> | <a href="/foi/" title="Freedom of information">Freedom of information</a> | <a href="/help/" title="">Website help</a>  | <a href="/feedback/" title="Feedback">Feedback</a> |</p>
+<p>| <a href="/disclaimer/" title="Disclaimer">Disclaimer</a> | <a href="/privacy/" title="Privacy">Privacy</a> | <a href="/copyright/" title="Copyright Notice">Copyright notice</a> | <a href="/accessibility/" title="Accessibility">Accessibility</a> | <a href="/foi/" title="Freedom of information">Freedom of information</a> | <a href="/help/" title="">Website help</a>  | <a href="/aboutus/contact/" title="Contact us">Contact us</a> |</p>
 </div>
 <div class="feedback">
 <p>The University of Manchester, Oxford Road, Manchester, M13 9PL, UK | Tel: +44 (0) 161 306 6000<br>Royal Charter Number: RC000797</p>
@@ -135,6 +135,16 @@
 </div>
 
 <p class="hidden">This website will look much better in a web browser that supports <a title="Supports Web Standards" href="http://www.webstandards.org/">web standards</a>, but it is accessible to any browser or Internet device.</p>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write("\<script src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'>\<\/script>" );
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3161158-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
 
 
 </body></html>
