--- a/f/fu/fun/funbrain.com.html
+++ b/f/fu/fun/funbrain.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the funbrain.com privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630041532id_/http%3A//fen.com/resources/privacyStatement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funbrain.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229021722id_/http%3A//fen.com/resources/privacyStatement.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><!--  --><head>
 <link type="text/css" href="http://img.infoplease.com/css/ln_styles.css" rel="stylesheet">
-<link rel="stylesheet" href="http://img.infoplease.com/css/pcstylesIP.css" type="text/css">
+<link rel="stylesheet" href="http://img.infoplease.com/css/macstylesIP.css" type="text/css">
 <script src="http://img.infoplease.com/js/fenhelppopups.js" type="text/javascript" language="javascript"></script>
 <title>Fen.com - Privacy Statement</title>
 <meta content="Family Education Network provides educational resources for K-12 parents, teachers, and students on everything from parenting to professional development with educational printables, quizzes, and more." name="description">
@@ -22,10 +22,7 @@
         </tr>
         <tr bgcolor="#EFEFEF"> 
     <td valign="BOTTOM"><a href="http://fen.com"><img src="http://img.infoplease.com/images/tmpl/ln/fen_network_logo.gif" width="169" height="65" alt="Family Education Network" border="0"></a></td>
-    <td valign="TOP" align="LEFT" width="472" height="68"><iframe align="top" src="http://ad.doubleclick.net/adi/general.familyeducation/;!category=xlnal;ch=44;site=fen.com;test=no;pos=tb;slot=1;sz=468x60;tile=1;ord=1183176932?" width="468" height="60" marginwidth="0" marginheight="0" hspace="1" vspace="0" frameborder="no" scrolling="no">
-<SCRIPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/general.familyeducation/;!category=xlnal;ch=44;site=fen.com;test=no;pos=tb;slot=1;sz=468x60;tile=1;ord=1183176932?"></SCRIPT>
-<NOSCRIPT><A href="http://ad.doubleclick.net/jump/general.familyeducation/;!category=xlnal;ch=44;site=fen.com;test=no;pos=tb;slot=1;sz=468x60;tile=1;ord=1183176932?"><img src="http://ad.doubleclick.net/ad/general.familyeducation/;!category=xlnal;ch=44;site=fen.com;test=no;pos=tb;slot=1;sz=468x60;tile=1;ord=1183176932?" width=468 height=60 border=0 alt="Click here to see more!"></A></NOSCRIPT>
-</iframe>        </td><td align="CENTER" valign="TOP" width="135" rowspan="2" bgcolor="#EFEFEF"><a href="http://FEkids.com/kln/?wtlAC=KLN_core6v1ln,ha-ln &#10;"><img src="http://img.infoplease.com/images/fekids_core6v1.gif" width="120" height="60" border="0" alt="FEkids.com"></a></td>
+    <td valign="TOP" align="LEFT" width="472" height="68"><a href="http://ad.doubleclick.net/jump/general.familyeducation/;!category=xlnal;ch=44;site=fen.com;test=no;pos=tb;slot=1;sz=468x60;tile=1;ord=1198894642?"><img src="http://ad.doubleclick.net/ad/general.familyeducation/;!category=xlnal;ch=44;site=fen.com;test=no;pos=tb;slot=1;sz=468x60;tile=1;ord=1198894642?" width="468" height="60" border="0" alt="Click here to see more!"></a>        </td><td align="CENTER" valign="TOP" width="135" rowspan="2" bgcolor="#EFEFEF"><a href="http://FEkids.com/kln/?wtlAC=KLN_core6v1ln,ha-ln &#10;"><img src="http://img.infoplease.com/images/fekids_core6v1.gif" width="120" height="60" border="0" alt="FEkids.com"></a></td>
 </tr>
 <tr> 
     <td valign="BOTTOM" bgcolor="#8694C0"><a href="http://fen.com"><img src="http://img.infoplease.com/images/tmpl/ln/network_tab.gif" width="169" height="27" alt="Learning Network" border="0"></a></td>
@@ -152,7 +149,7 @@ To quickly access a particular section of this policy, you can click directly on
 <br><a href="#Security" class="LNlink">Security and Credit Card Use</a>
 <br><a href="#Contacting" class="LNlink">Contacting Family Education Network</a>
 
-</p><p>Family Education Network is a division of Pearson Education, Inc.
+</p><p>Family Education Network is part of Pearson.
 </p><p>Please note that certain services and programs offered by Family Education Network may have additional privacy terms and/or limitations.
 Please check the specific service/program link(s) below to find these additional terms and/or limitations:
 </p><p> <a href="/resources/privacyStatement.html?add=Schoolcash#Schoolcash" class="LNlink">SchoolCash</a><br><a href="/resources/privacyStatement.html?add=Mygradebook#Mygradebook" class="LNlink">MyGradeBook</a><br><a href="/resources/privacyStatement.html?add=Quizlab#Quizlab" class="LNlink">Quiz Lab</a>
