--- a/v/vi/vis/vistage.com.html
+++ b/v/vi/vis/vistage.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the vistage.com privacy policy that was archived on 2007-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070628220125id_/http%3A//www.vistage.com/about-us/legal-documents/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vistage.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229022017id_/http%3A//www.vistage.com/about-us/legal-documents/privacy-policy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!-- Mirrored from cms.vistage.com/about-us/legal-documents/privacy-policy.html by HTTrack Website Copier/3.x [XR&CO'2007], Thu, 14 Jun 2007 01:47:43 GMT --><!-- Added by HTTrack --><head><meta http-equiv="content-type" content="text/html;charset=iso-8859-1"><!-- /Added by HTTrack -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!-- Mirrored from cms.vistage.com/about-us/legal-documents/privacy-policy.html by HTTrack Website Copier/3.x [XR&CO'2007], Thu, 27 Dec 2007 17:08:21 GMT --><!-- Added by HTTrack --><head><meta http-equiv="content-type" content="text/html;charset=iso-8859-1"><!-- /Added by HTTrack -->
 
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
@@ -61,16 +61,38 @@
 
 <div id="page">
 
-	<div id="header"><img class="top_logo_2" style="margin-top: 15px;" src="../../fileadmin/public_site_2006_1_18/graphics/logos/vistage_logo_50th.gif" alt="Vistage International – The World’s Largest CEO Membership Organization, better leaders, decisions, results">
-
-
+	<div id="header"><img style="margin-top: 4em;" src="../../fileadmin/public_site_2006_1_18/graphics/logos/vistage_logo_full.gif" alt="Vistage International – The World’s Leading Chief Executive Organization, better leaders, decisions, results">
 <img id="phone" src="../../fileadmin/public_site_2006_1_18/graphics/misc/img-phone.gif" alt="800.274.2367">
-</div>
+
+<!--  CONTENT ELEMENT, uid:2089/html [begin] -->
+<a id="c2089"></a>
+<!--  Raw HTML content: [begin] -->
+<span style="position: absolute; top: 50px; right:0px;">
+<!-- Search My Google Mini -->
+<form method="get" action="http://search.vistage.com/search" id="googleForm">
+  <table>
+	<tbody><tr>
+	  <td>
+		<input type="text" name="q" id="queryText" style="text-size: 10px;" size="20" maxlength="255" value="">
+		<input type="submit" name="btnG" style="text-size: 10px;" value="Search">
+		<input type="hidden" name="site" value="default_collection">
+		<input type="hidden" name="client" value="vistage_centered">
+		<input type="hidden" name="proxystylesheet" value="vistage_centered">
+		<input type="hidden" name="output" value="xml_no_dtd">
+	  </td>
+	  <td>
+		<img src="../../fileadmin/public_site_2006_1_18/graphics/header/powered2.gif">
+	  </td>
+	</tr>
+  </tbody></table>
+</form>
+<!-- Search My Google Mini-->
+</span></div>
 	
 	<div id="top_menu">
 	<table class="top_menu" cellspacing="0">
 
-		<tbody><tr><td class="unbound"><a href="../../index.html" onfocus="blurLink(this);">home</a></td><td><a href="../../programs/vistage-programs.html" onfocus="blurLink(this);">programs</a></td><td><a href="../../events.html" onfocus="blurLink(this);">events</a></td><td><a href="../../join-vistage.html" onfocus="blurLink(this);">join Vistage</a></td><td class="current"><a href="../../about-us.html" onfocus="blurLink(this);">about us</a></td><td><a href="https://view.vistage.com/portal/" onfocus="blurLink(this);">Member Log-in</a></td></tr>
+		<tbody><tr><td class="unbound"><a href="../../index.html" onfocus="blurLink(this);">home</a></td><td><a href="../../programs/vistage-programs.html" onfocus="blurLink(this);">programs</a></td><td><a href="../../events.html" onfocus="blurLink(this);">events</a></td><td><a href="../../join-vistage.html" onfocus="blurLink(this);">join Vistage</a></td><td class="current"><a href="../../about-us.html" onfocus="blurLink(this);">about us</a></td><td><a href="../../aspvistage/ext-login.html" onfocus="blurLink(this);">Member Log-in</a></td></tr>
 	</tbody></table>
 	
 	</div>
@@ -84,7 +106,7 @@
 				<div id="page_heading">
 					
 				</div>
-				<div class="insert"><ul><li><a href="../company-overview.html" onfocus="blurLink(this);">company overview</a></li><li><a href="../vistage-leadership.html" onfocus="blurLink(this);">Vistage leadership</a></li><li><a href="../vistage-board-of-directors.html" onfocus="blurLink(this);">Vistage board of directors</a></li><li><a href="../member-demographics.html" onfocus="blurLink(this);">member demographics</a></li><li><a href="../worldwide-offices.html" onfocus="blurLink(this);">worldwide offices</a></li><li><a href="../testimonials.html" onfocus="blurLink(this);">testimonials</a></li><li><a href="../enewsletter.html" onfocus="blurLink(this);">eNewsletter</a></li><li><a href="../press-room.html" onfocus="blurLink(this);">press room</a></li><li><a href="http://mytec.teconline.com/www/vistage/vis_jobopenings_aut.asp" onfocus="blurLink(this);">careers</a></li><li><a href="http://mytec.teconline.com/www/vistage/vis_contactus_aut.asp" target="_self" onfocus="blurLink(this);">contact us</a></li></ul></div>
+				<div class="insert"><ul><li><a href="../company-overview.html" onfocus="blurLink(this);">company overview</a></li><li><a href="../vistage-leadership.html" onfocus="blurLink(this);">Vistage leadership</a></li><li><a href="../vistage-board-of-directors.html" onfocus="blurLink(this);">Vistage board of directors</a></li><li><a href="../member-demographics.html" onfocus="blurLink(this);">member demographics</a></li><li><a href="../worldwide-offices.html" onfocus="blurLink(this);">worldwide offices</a></li><li><a href="../testimonials.html" onfocus="blurLink(this);">testimonials</a></li><li><a href="../enewsletter.html" onfocus="blurLink(this);">eNewsletter</a></li><li><a href="../press-room.html" onfocus="blurLink(this);">press room</a></li><li><a href="../../aspvistage/ext-careers.html" onfocus="blurLink(this);">careers</a></li><li><a href="../../aspvistage/ext-contactus.html" target="_self" onfocus="blurLink(this);">contact us</a></li></ul></div>
 				
 				<!--TYPO3SEARCH_begin--><!--TYPO3SEARCH_end-->
 		
@@ -173,39 +195,39 @@
 	
 	<p>
 	<a href="../../index.html">home</a> | <a href="../../programs.html">programs</a> | <a href="http://mytec.teconline.com/www/vistage/vis_events_find_aut.asp">events</a> | <a href="../../join-vistage.html">join Vistage</a> | <a href="../../about-us.html">about us</a> | <a href="http://view.vistage.com/portal/login.jsp">Vistage View</a> | <a href="../press-room.html">press room</a><br>
-<a href="../worldwide-offices.html">worldwide offices</a> | <a href="http://mytec.teconline.com/www/vistage/vis_contactus_aut.asp">contact us</a> <!-- | <a href="sitemap.html">sitemap</a> -->
+<a href="../worldwide-offices.html">worldwide offices</a> | <a href="http://mytec.teconline.com/www/vistage/vis_contactus_aut.asp">contact us</a> | <a href="http://mytec.teconline.com/www/vistage/vis_jobopenings_aut.asp">careers</a> <!-- | <a href="sitemap.html">sitemap</a> -->
 
 </p>
 <p style="font-size:9px">
 <a href="../worldwide-offices.html">Vistage International Affiliates, TEC, The Executive Committee, The Executive Connection</a><br>
-Vistage International and its affiliates have more than 13,500 members in 16 countries<br>representing the world's largest CEO membership organization based on revenue.
+Vistage International and its affiliates have more than 14,000 members in 16 countries<br>representing the world's leading chief executive organization based on revenue.
 </p>
 <p style="font-size:9px">©Copyright 2007. Vistage International, Inc. All Rights Reserved.<br>
 Use of this Web site constitutes acceptance of the Vistage <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-and-conditions.html">Terms &amp; Conditions</a>.</p>
-
 </div></div>
 	
-	<div id="footer"><!--
-&copy; Copyright 2006 Vistage<span class="superscript">TM</span>, Inc. All Rights Reserved.
-<p>Use of this Web site constitutes acceptance of the Vistage <a href="#">Privacy Policy</a> and <a href="#">Terms &amp; Conditions</a>.</p>
--->
-</div>
+	<div id="footer"><!-- End --></div>
 
 
 
 
 <!-- Mirrored from cms.vistage.com/vistage-view.html by HTTrack Website Copier/3.x [XR&CO'2006], Fri, 03 Mar 2006 20:49:29 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=iso-8859-1"><!-- /Added by HTTrack -->
-
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-397931-1";
 urchinTracker();
+</script><script language="JavaScript">
+  // Vistage Retargeting
+  rsi_account = 'E0F76E0DFFFB12F24942417F257799A0';
+  rsi_site    = '2677FF5538294694DE9E6EF6EFB07455';
+  rsi_event   = '0497B64F168A3872C5325CEA9CDDE82C';
 </script>
+<script language="JavaScript" src="http://ads.revsci.net/adserver/rsi_event.js"></script>
 
 
 
-<!-- Mirrored from cms.vistage.com/about-us/legal-documents/privacy-policy.html by HTTrack Website Copier/3.x [XR&CO'2007], Thu, 14 Jun 2007 01:47:43 GMT -->
+<!-- Mirrored from cms.vistage.com/about-us/legal-documents/privacy-policy.html by HTTrack Website Copier/3.x [XR&CO'2007], Thu, 27 Dec 2007 17:08:21 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=iso-8859-1"><!-- /Added by HTTrack -->
 </body></html>
