--- a/r/re/rea/realestateview.com.au.html
+++ b/r/re/rea/realestateview.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the realestateview.com.au privacy policy that was archived on 2007-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070628203553id_/http%3A//www.realestateview.com.au/privacy-policy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realestateview.com.au privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229023639id_/http%3A//www.realestateview.com.au/privacy-policy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -10,21 +10,38 @@
 </head>
 <body>
 <a id="top"></a>
-<!-- begin tab header -->
+<div id="wrapper">
+<div id="wrapper-inner">
+<div id="sitebar">
+<ul>
+	<li id="reivlink"><a href="http://www.reiv.com.au">reiv.com.au</a></li>
+    <li id="lslink"><a href="http://www.latestsales.com.au">latestsales.com.au</a></li>
+    <li id="bviewlink"><a href="http://www.businessesview.com.au">businessesview.com.au</a></li>
+    <!--<li id="streetlink"><a href="http://www.street-directory.com.au">street-directory.com.au</a></li>-->
+    <li id="revlink"><a href="/members/" title="Log into REV member services">Agent Login</a></li>
+</ul>
+</div>
+
 <div id="header">
-  <div class="revlogo"><a href="/"><img src="/images/real-estate-view-logo.gif" alt="Real Estate View Logo" width="300" height="68" border="0"></a></div>
-  <div class="ad460"><!-- 
-<IFRAME FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=468 HEIGHT=60 SRC="http://ad.adsalliance.com/st?ad_type=iframe&ad_size=468x60&section=198748"></IFRAME>
- --></div>
+  <div class="revlogo"><a href="/"><img src="/images/real-estate-view-logo.gif" alt="Real Estate View Logo" width="225" height="51" border="0"></a></div>
+  <div class="ad728">
+	<!-- begin ad tag-->
+<iframe src="http://ad.doubleclick.net/adi/Realestateview.com.au/ros;sz=728x90;ord=[timestamp]?" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000">
+<script language="JavaScript" src="http://ad.doubleclick.net/adj/Realestateview.com.au/ros;sz=728x90;abr=!ie;ord=[timestamp]?" type="text/javascript"></script>
+<noscript><a href="http://ad.doubleclick.net/jump/Realestateview.com.au/ros;sz=728x90;abr=!ie4;abr=!ie5;abr=!ie6;ord=[timestamp]?" target="_blank"><img src="http://ad.doubleclick.net/ad/Realestateview.com.au/ros;sz=728x90;abr=!ie4;abr=!ie5;abr=!ie6;ord=[timestamp]?" width="728" height="90" border="0" alt=""></a></noscript>
+</iframe>
+<!-- End ad tag -->
+  </div>
 
 </div>
 <a id="main" name="main" class="access">Skip Navigation</a>
 <div id="navigation">
   <ul id="nav">
-    <li><a href="/" class="buyoff" title="View Properties to Buy"><span>View Properties to Buy</span></a></li>
-	<li><a href="/rent/" class="rentoff" title="View Properties to Rent"><span>View Properties to Rent</span></a></li>
-    <li><a href="/sell/" class="selloff" title="View Properties to Sell"><span>View Properties to Sell</span></a></li>
-    <li><a href="/finance/" class="financeoff" title="View Finance Information"><span>View Finance Information</span></a></li>
+    <li class="viewbuy"><a href="/" title="View Properties to Buy">View Properties to Buy</a></li>
+    <li class="viewrent"><a href="/rent/" title="View Properties to Rent">View Properties to Rent</a></li>
+    <li class="viewsell"><a href="/sell/" title="View Properties to Sell">View Properties to Sell</a></li>
+    <li class="viewnews"><a href="/information/" title="View News &amp; Finance Information">View News &amp;amp; Finance Information</a></li>
+	<li class="viewbusinesses"><a href="http://www.businessesview.com.au" title="View Businesses" onclick="window.location='/cgi-bin/redirect_clickthrus.pl?cat=1&amp;ad=Businessesview+(HP)&amp;amp;url=businessesview'; return false;">View Businesses</a></li>
   </ul>
   <ul id="sub">
         
@@ -159,9 +176,14 @@
 	  </div>
      
 	  
-<!--<div class="skyscraperad">
-<IFRAME FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=160 HEIGHT=600 SRC="http://ad.adsalliance.com/st?ad_type=iframe&ad_size=160x600&section=198748&promote_sizes=1"></IFRAME>
-</div>-->
+<div class="skyscraperad">
+<!-- begin ad tag-->
+<iframe src="http://ad.doubleclick.net/adi/Realestateview.com.au/ros;sz=160x600;ord=[timestamp]?" width="160" height="600" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000">
+<script language="JavaScript" src="http://ad.doubleclick.net/adj/Realestateview.com.au/ros;sz=160x600;abr=!ie;ord=[timestamp]?" type="text/javascript"></script>
+<noscript><a href="http://ad.doubleclick.net/jump/Realestateview.com.au/ros;sz=160x600;abr=!ie4;abr=!ie5;abr=!ie6;ord=[timestamp]?" target="_blank"><img src="http://ad.doubleclick.net/ad/Realestateview.com.au/ros;sz=160x600;abr=!ie4;abr=!ie5;abr=!ie6;ord=[timestamp]?" width="160" height="600" border="0" alt=""></a></noscript>
+</iframe>
+<!-- End ad tag -->
+</div>
     </div>
   </div>
  
@@ -174,19 +196,36 @@
 
 <div id="footer">
 <a href="#top" class="btop"><img src="/images/arrow-up.gif" width="16" height="16" border="0" align="absmiddle">Back to Top</a>
-  <p><a href="/about-us/feedback.shtml"><strong>Feedback</strong></a>&nbsp; | <strong>&nbsp;</strong><a href="/buy/bulletin-board.shtml"><strong>Buyers Bulletin Board</strong></a>&nbsp; | &nbsp;<a href="/sell/bulletin-board.shtml"><strong>Sellers Bulletin Board</strong></a>&nbsp; | <a href="/sitemap.shtml"><strong>Site Map</strong></a><!-- |<br />
-    <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+German+%28HP%29&amp;url=german" target="immobel">Deutsch</a>, <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+French+%28HP%29&amp;url=french" target="immobel">Fran&ccedil;ais</a>, <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+Italian+%28HP%29&amp;url=italian" target="immobel">Italiano</a>, <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+Polish+%28HP%29&amp;url=polish" target="immobel">Polski</a>, <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+Portuguese+%28HP%29&amp;url=portuguese" target="immobel">Portugu&ecirc;s</a>, <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+Spanish+%28HP%29&amp;url=spanish" target="immobel">Espa&ntilde;ol</a>, <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+ChineseT+%28HP%29&amp;url=chineset" target="immobel"><img src="http://www.realestateview.com.au/images/chitra.gif" align="absbottom" border="0" height="20" width="60" /></a>, <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+ChineseS+%28HP%29&amp;url=chineses" target="immobel"><img src="http://www.realestateview.com.au/images/chisim.gif" align="absbottom" border="0" height="22" width="53" /></a>, <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+Japanese+%28HP%29&amp;url=japanese" target="immobel"><img src="http://www.realestateview.com.au/images/japan.gif" align="absbottom" border="0" height="20" width="40" /></a>, <a href="http://www.realestateview.com.au/cgi-bin/redirect_clickthrus.pl?cat=5&amp;ad=Immobel+Russian+%28HP%29&amp;url=russian" target="immobel"><img src="http://www.realestateview.com.au/images/russian.gif" align="absbottom" border="0" height="22" width="56" /></a>--></p>
+  <p><a href="/about-us/feedback.shtml"><strong>Feedback</strong></a>&nbsp; | <strong>&nbsp;</strong><a href="/buy/bulletin-board.shtml"><strong>Buyers Bulletin Board</strong></a>&nbsp; | &nbsp;<a href="/sell/bulletin-board.shtml"><strong>Sellers Bulletin Board</strong></a>&nbsp; | <a href="/sitemap.shtml"><strong>Site Map</strong></a></p>
   <p>Copyright © 2001-2007 realestateview.com.au Ltd <a href="/conditions-of-use.shtml"> Conditions of Use</a> | <a href="/privacy-policy.shtml">Privacy Policy</a></p>
 </div>
 </div>
+</div>
+</div>
 <!-- Start Google Analytics -->
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-974375-1";
-urchinTracker();
-</script>
-<!-- End Google Analytics -->
+	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+	</script>
+	<script type="text/javascript">
+	_uacct = "UA-974375-1";
+	urchinTracker();
+	</script>
+	<!-- End Google Analytics -->
+	<div style="display:none;">
+	<!-- START Nielsen//NetRatings SiteCensus V5.3 -->
+	<!-- COPYRIGHT 2007 Nielsen//NetRatings -->
+	<script type="text/javascript">
+		var _rsCI="reiv";
+		var _rsCG="realestateview";
+		var _rsDN="//secure-au.imrworldwide.com/";
+		var _rsCC=0;
+		var _rsCL=1;
+	</script>
+	<script type="text/javascript" src="//secure-au.imrworldwide.com/v53.js"></script>
+	<noscript>
+		<div><img src="//secure-au.imrworldwide.com/cgi-bin/m?ci=reiv&amp;cg=realestateview" alt=""/></div>
+	</noscript>
+	<!-- END Nielsen//NetRatings SiteCensus V5.3 -->
+    </div>		
 
 
 </body></html>
