--- a/a/al/all/allaboutsymbian.com.html
+++ b/a/al/all/allaboutsymbian.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allaboutsymbian.com privacy policy that was archived on 2007-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070613014631id_/http%3A//www.allaboutsymbian.com/site/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allaboutsymbian.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229024459id_/http%3A//www.allaboutsymbian.com/site/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
   <title>All About Symbian - Privacy Policy</title>
@@ -12,7 +12,19 @@
 
 <div class="header">
 <div class="topad">
-<a href="http://www.allaboutsymbian.com/phpAdsNew/adclick.php?bannerid=191&amp;zoneid=1&amp;source=&amp;dest=http%3A%2F%2Fwww.quickoffice.com" target="_blank"><img src="http://www.allaboutsymbian.com/images/ads//728x90_qoffice_s60.gif" width="728" height="90" alt="" title="" border="0"></a><div id="beacon_191" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.allaboutsymbian.com/phpAdsNew/adlog.php?bannerid=191&amp;clientid=85&amp;zoneid=1&amp;source=&amp;block=0&amp;capping=0&amp;cb=2877de92250291f6ec80c82879959551" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
+<!-- TF 468x60 JScript HORIZ NoPop code -->
+<script language="javascript"><!--
+document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=AllAboutSymbian&adSpace=ROS&size=468x60&type=horiz&pop=0&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
+//-->
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=AllAboutSymbian&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;pop=0&amp;requestID=20520246800.7815314765553181"></script>
+<noscript>
+   <a href="http://a.tribalfusion.com/i.click?site=AllAboutSymbian&adSpace=ROS&size=468x60&requestID=1775468073" target=_blank>
+   <img src="http://a.tribalfusion.com/i.ad?site=AllAboutSymbian&adSpace=ROS&size=468x60&requestID=1775468073" 
+                  width=468 height=60 border=0 alt="Click Here"></a>
+</noscript>
+
+<!-- TF 468x60 JScript HORIZ NoPop code -->
+<div id="beacon_22" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.allaboutsymbian.com/phpAdsNew/adlog.php?bannerid=22&amp;clientid=22&amp;zoneid=1&amp;source=&amp;block=0&amp;capping=0&amp;cb=9cb87a40a2ed2bf747524ec6fc4ffa43" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
 
 
 </div>
@@ -48,14 +60,14 @@
 <script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=AllAboutSymbian&adSpace=ROS&size=120x600&noAd=1&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=AllAboutSymbian&amp;adSpace=ROS&amp;size=120x600&amp;noAd=1&amp;requestID=20520242760.8758103761632892"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=AllAboutSymbian&amp;adSpace=ROS&amp;size=120x600&amp;noAd=1&amp;requestID=20520246830.561144492986644"></script>
 <noscript>
    <a target='_blank' href="http://www.allaboutsymbian.com/phpAdsNew/adclick.php?bannerid=162&amp;zoneid=24&amp;source=&amp;dest=http%3A%2F%2Fa.tribalfusion.com%2Fi.click%3Fsite%3DAllAboutSymbian%26adSpace%3DROS%26size%3D120x600%26requestID%3D1297771441&amp;ismap=" 
    <img src="http://a.tribalfusion.com/i.ad?site=AllAboutSymbian&adSpace=ROS&size=120x600&requestID=1297771441" 
                   width=120 height=600 border=0 alt="Click Here"></a>
 </noscript>
 <!-- TF 120x600 JScript NoAD code -->
-<div id="beacon_162" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.allaboutsymbian.com/phpAdsNew/adlog.php?bannerid=162&amp;clientid=99&amp;zoneid=24&amp;source=&amp;block=0&amp;capping=0&amp;cb=f1e7b8b5f5784cc9e2d8a077d3d1d842" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
+<div id="beacon_162" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.allaboutsymbian.com/phpAdsNew/adlog.php?bannerid=162&amp;clientid=99&amp;zoneid=24&amp;source=&amp;block=0&amp;capping=0&amp;cb=044758f15291dbdbaf6380536018d0da" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
 
 </div>
 
@@ -66,9 +78,22 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 <h2>Adverts</h2>
 <div align="center" class="sidead">
+
+
+
+
+
+
+<span style="margin-left:10px;margin-top:0px;">
 <a href="http://www.quickoffice.com" title="Quickoffice"><img alt="Quickoffice" border="0" src="http://www.allaboutsymbian.com/images/ads/125x125-banner_QOffice_S60.gif" height="125" width="125" vspace="3" hspace="10"></a>
-<a href="http://developer.sonyericsson.com/site/global/newsandevents/campaigns/productive_mobility/p_productivemobility.jsp" title="SEM Developer"><img alt="SEM" border="0" src="http://www.allaboutsymbian.com/images/ads/SEM_125x125.gif" height="125" width="125" vspace="3" hspace="10"></a>
-</div>  <br>
+
+<a href="http://www.allaboutsymbian.com/phpAdsNew/adclick.php?bannerid=219&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Ffasttrack.uiq.com%2F" target="_blank"><img src="http://www.allaboutsymbian.com/phpAdsNew/adimage.php?filename=fasttrack_125_125.jpg&amp;contenttype=jpeg" width="125" height="125" alt="" title="" border="0"></a><div id="beacon_219" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.allaboutsymbian.com/phpAdsNew/adlog.php?bannerid=219&amp;clientid=138&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=3bb3d1958681b67dd2c5c6d0e21bb1f2" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
+
+</span>
+
+
+</div>
+ <br>
 
 
 <h2>Looking for Software?</h2>
@@ -169,18 +194,18 @@ Disable</a>; Design Consultants: <a href="http://www.3bweb.com">3B Web Design</a
 	</li>
 	<li id="features"><h3><a href="http://www.allaboutsymbian.com/software/" title="Software">Software</a></h3>
 		<ul>
-			<li><a href="http://www.allaboutsymbian.com/software/Nokia_6690/">Nokia 6680</a></li>
 			<li><a href="http://www.allaboutsymbian.com/software/Nokia_N70/">Nokia N70</a></li>
 			<li><a href="http://www.allaboutsymbian.com/software/Nokia_N73/">Nokia N73</a></li>
 			<li><a href="http://www.allaboutsymbian.com/software/Nokia_N80/">Nokia N80</a></li>
+			<li><a href="http://www.allaboutsymbian.com/software/Nokia_6690/">Nokia N93</a></li>
 			<li><a href="http://www.allaboutsymbian.com/software/Nokia_N95/">Nokia N95</a></li>
 			<li><a href="http://www.allaboutsymbian.com/software/Nokia_E61/">Nokia E61 / E61i</a></li>
-			<li><a href="http://www.allaboutsymbian.com/software/Nokia_E61/">Nokia E65 / E61i</a></li>
+			<li><a href="http://www.allaboutsymbian.com/software/Nokia_E61/">Nokia E65</a></li>
+			<li><a href="http://www.allaboutsymbian.com/software/Nokia_E90/">Nokia E90</a></li>
 			<li><a href="http://www.allaboutsymbian.com/software/Nokia_9300/">Nokia 9300</a></li>
-			<li><a href="http://www.allaboutsymbian.com/software/Nokia_9500/">Nokia 9500</a></li>
-			<li><a href="http://www.allaboutsymbian.com/software/Sony_Ericsson_P910/">Sony Ericsson P910</a></li>
 			<li><a href="http://www.allaboutsymbian.com/software/Sony_Ericsson_P990/">Sony Ericsson P990</a></li>
-			<li><a href="http://www.allaboutsymbian.com/software/Sony_Ericsson_P990/">Sony Ericsson M600</a></li>			
+			<li><a href="http://www.allaboutsymbian.com/software/Sony_Ericsson_P990/">Sony Ericsson M600</a></li>
+			<li><a href="http://www.allaboutsymbian.com/software/Sony_Ericsson_P1/">Sony Ericsson P1i</a></li>
 			<li><a href="http://www.allaboutsymbian.com/software/morephones.php">Other Devices...</a></li>
 
 		</ul>
