worldoil.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 20358,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.24,
  "homepage_snapshot_redirected_domain": "worldoil.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071002051735id_/http://worldoil.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071002051735id_/http%3A//worldoil.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "worldoil.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229024912id_/http%3A//worldoil.com/Commerce/legal/privacy_policy.asp",
  "policy_title": "WorldOil.com - World Oil: Our Privacy Policy",
  "policy_url": "worldoil.com/Commerce/legal/privacy_policy.asp",
  "sha1": "8331c8fb46d88b18731c286b89f0b1922939f4d9",
  "simhash": 14107419012293403766,
  "simhash_updated": false,
  "site_hostname": "worldoil.com",
  "site_url": "http://worldoil.com",
  "smog": 16.53,
  "strict_updated": false,
  "timestamp": "20071229024912",
  "word_count": 2841,
  "year": 2007
}

--- a/w/wo/wor/worldoil.com.html
+++ b/w/wo/wor/worldoil.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the worldoil.com privacy policy that was archived on 2007-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070627013953id_/http%3A//www.worldoil.com/Commerce/legal/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worldoil.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229024912id_/http%3A//worldoil.com/Commerce/legal/privacy_policy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <style>
@@ -242,7 +242,7 @@ if (browName!='Netscape')
 document.write('<s'+'cript lang' + 'uage="jav' + 'ascript" src="http://banman.euromoneydigital.com/a.aspx?ZoneID=' + ZoneID + '&amp;Task=Get&amp;IFR=False&amp;PageID=31924&amp;SiteID=' + SiteID + '&amp;Random=' + browDateTime + '">'); document.write('</'+'scr'+'ipt>');
 }
 // --> 
-</script><script language="javascript" src="http://banman.euromoneydigital.com/a.aspx?ZoneID=1062&amp;Task=Get&amp;IFR=False&amp;Browser=NETSCAPE4&amp;PageID=31924&amp;SiteID=27&amp;Random=1580455530479"></script>
+</script><script language="javascript" src="http://banman.euromoneydigital.com/a.aspx?ZoneID=1062&amp;Task=Get&amp;IFR=False&amp;Browser=NETSCAPE4&amp;PageID=31924&amp;SiteID=27&amp;Random=1580455535356"></script>
 <noscript>
     <a href="http://banman.euromoneydigital.com/a.aspx?ZoneID=1062&amp;Task=Click&amp;Mode=HTML&amp;SiteID=27&amp;PageID=31924" target="_blank">
     <img src="http://banman.euromoneydigital.com/a.aspx?ZoneID=1062&amp;Task=Get&amp;Mode=HTML&amp;SiteID=27&amp;PageID=31924" width="125" height="125" border="0"  alt=""></a>
@@ -265,7 +265,7 @@ if (browName!='Netscape')
 document.write('<s'+'cript lang' + 'uage="jav' + 'ascript" src="http://banman.euromoneydigital.com/a.aspx?ZoneID=' + ZoneID + '&amp;Task=Get&amp;IFR=False&amp;PageID=71576&amp;SiteID=' + SiteID + '&amp;Random=' + browDateTime + '">'); document.write('</'+'scr'+'ipt>');
 }
 // --> 
-</script><script language="javascript" src="http://banman.euromoneydigital.com/a.aspx?ZoneID=1263&amp;Task=Get&amp;IFR=False&amp;Browser=NETSCAPE4&amp;PageID=71576&amp;SiteID=27&amp;Random=1580455530483"></script>
+</script><script language="javascript" src="http://banman.euromoneydigital.com/a.aspx?ZoneID=1263&amp;Task=Get&amp;IFR=False&amp;Browser=NETSCAPE4&amp;PageID=71576&amp;SiteID=27&amp;Random=1580455535358"></script>
 <noscript>
     <a href="http://banman.euromoneydigital.com/a.aspx?ZoneID=1263&amp;Task=Click&amp;Mode=HTML&amp;SiteID=27&amp;PageID=71576" target="_blank">
     <img src="http://banman.euromoneydigital.com/a.aspx?ZoneID=1263&amp;Task=Get&amp;Mode=HTML&amp;SiteID=27&amp;PageID=71576" width="125" height="125" border="0"  alt=""></a>
@@ -313,7 +313,7 @@ if (browName=='Netscape'){
 else
      { document.write('<ifr'+'ame src="http://banman.euromoneydigital.com/a.aspx?ZoneID=291&amp;Task=Get&amp;SiteID=27&amp;X=' + browDateTime + '" width=468 height=60 Marginwidth=0 Marginheight=0 Hspace=0 Vspace=0 Frameborder=0 Scrolling=No></ifr'+'ame>'); }
 // --> 
-</script><iframe src="http://banman.euromoneydigital.com/a.aspx?ZoneID=291&amp;Task=Get&amp;Browser=NETSCAPE6&amp;SiteID=27&amp;X=1580455530485" width="468" height="60" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="No"></iframe>
+</script><iframe src="http://banman.euromoneydigital.com/a.aspx?ZoneID=291&amp;Task=Get&amp;Browser=NETSCAPE6&amp;SiteID=27&amp;X=1580455535360" width="468" height="60" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="No"></iframe>
 <noscript>
     <a href="http://banman.euromoneydigital.com/a.aspx?ZoneID=291&amp;Task=Click&amp;Mode=HTML&amp;SiteID=27&amp;PageID=62525" target="_blank">
     <img src="http://banman.euromoneydigital.com/a.aspx?ZoneID=291&amp;Task=Get&amp;Mode=HTML&amp;SiteID=27&amp;PageID=62525" width="468" height="60" border="0"  alt=""></a></noscript>
