--- a/d/de/des/dessci.com.html
+++ b/d/de/des/dessci.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dessci.com privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630124743id_/http%3A//www.dessci.com/en/company/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dessci.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229033549id_/http%3A//www.dessci.com/en/company/privacy.htm) for the most accurate reproduction.-->
 
 <html><!-- doc:support --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -232,7 +232,21 @@ Be certain the words Privacy Policy are in the Subject line.</p>
 				</tr>
 			</tbody></table>	
 		</td>
-		<td>&nbsp;</td><!-- right margin --></tr></tbody></table><!-- outermost table (end) --><!-- End dsi3of3.htm -->
+		<td>&nbsp;</td><!-- right margin --></tr></tbody></table><!-- outermost table (end) -->
+	<!-- End dsi3of3.htm -->
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+</script>
+
+<script type="text/javascript">
+
+_uacct = "UA-667634-1";
+
+urchinTracker();
+
+</script>
+
 <!--webbot bot="SSI" endspan i-checksum="62040" -->
 
 </body></html>
