goireland.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 9072,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.57,
  "homepage_snapshot_redirected_domain": "goireland.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071002192818id_/http://www.goireland.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071002192818id_/http%3A//goireland.com",
  "interval": "2007_B",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "goireland.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229043148id_/http%3A//www.goireland.com/About/privacy_policy.htm",
  "policy_title": "Privacy Policy - GoIreland.com",
  "policy_url": "goireland.com/About/privacy_policy.htm",
  "sha1": "9003a1c74bf76c9fe636cfa3981dab53c1828dbf",
  "simhash": 15190114568624354120,
  "simhash_updated": true,
  "site_hostname": "goireland.com",
  "site_url": "http://goireland.com",
  "smog": 14.74,
  "strict_updated": true,
  "timestamp": "20071229043148",
  "word_count": 1498,
  "year": 2007
}

--- a/g/go/goi/goireland.com.html
+++ b/g/go/goi/goireland.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the goireland.com privacy policy that was archived on 2007-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070627104543id_/http%3A//www.goireland.com/About/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goireland.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229043148id_/http%3A//www.goireland.com/About/privacy_policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>Privacy Policy - GoIreland.com</title>
 <meta name="description" content="The premier guide to Reserve Accommodation, car rental, flights, ferries and vacation packages in Dublin and across Ireland - over 1000 Irish Hotels, Country Houses, luxurious Castles and homely Guesthouses featuring golf, fishing and conference facilities.">
@@ -342,10 +342,10 @@
 <tr><td align="right" width="1" bgcolor="#A5A5A5"><div align="right"><img height="1" src="/pics/header/spacer.gif" width="1"></div></td>
 	<td align="left" width="129px" bgcolor="#eaeaea">
 
- <a class="news" href="http://del.icio.us/post?url=http://www.goireland.com//about/privacy_policy.htm&amp;title=Visit Ireland with GoIreland.com"><img hspace="5" src="/Pics/bookmarks/delicious.png" border="0" alt="Submit to del.icio.us">del.icio.us</a>
-<br><a class="news" href="http://digg.com/submit?phase=2&amp;url=http://www.goireland.com//about/privacy_policy.htm&amp;title=Visit Ireland with GoIreland.com"><img hspace="5" src="/Pics/bookmarks/Digg.png" border="0" alt="Submit to Digg.it">Digg it</a>
-<br><a class="news" href="http://myweb2.search.yahoo.com/myresults/bookmarklet?t=Visit Ireland with GoIreland.com&amp;u=http://www.goireland.com//about/privacy_policy.htm"><img hspace="5" src="/Pics/bookmarks/YahooMyWeb.png" border="0" alt="Submit to Yahoo MyWeb">Yahoo MyWeb</a>
-<br><a class="news" href="http://www.stumbleupon.com/submit?url=http://www.goireland.com//about/privacy_policy.htm&amp;title=Visit Ireland with GoIreland.com"><img hspace="5" border="0" src="/Pics/bookmarks/stumbleit.gif" alt="Submit to StumbleUpon">Stumble It!</a>
+ <a class="news" target="_NEW" href="http://del.icio.us/post?url=http://www.goireland.com//about/privacy_policy.htm&amp;title=Visit Ireland with GoIreland.com"><img hspace="5" src="/Pics/bookmarks/delicious.png" border="0" alt="Submit to del.icio.us">del.icio.us</a>
+<br><a class="news" target="_NEW" href="http://digg.com/submit?phase=2&amp;url=http://www.goireland.com//about/privacy_policy.htm&amp;title=Visit Ireland with GoIreland.com"><img hspace="5" src="/Pics/bookmarks/Digg.png" border="0" alt="Submit to Digg.it">Digg it</a>
+<br><a class="news" target="_NEW" href="http://myweb2.search.yahoo.com/myresults/bookmarklet?t=Visit Ireland with GoIreland.com&amp;u=http://www.goireland.com//about/privacy_policy.htm"><img hspace="5" src="/Pics/bookmarks/YahooMyWeb.png" border="0" alt="Submit to Yahoo MyWeb">Yahoo MyWeb</a>
+<br><a class="news" target="_NEW" href="http://www.stumbleupon.com/submit?url=http://www.goireland.com//about/privacy_policy.htm&amp;title=Visit Ireland with GoIreland.com"><img hspace="5" border="0" src="/Pics/bookmarks/stumbleit.gif" alt="Submit to StumbleUpon">Stumble It!</a>
 
 
 
